XML 8.7.19 päivitys Päivitettiin käännökset vastaamaan käännöspohjan versiota 8.7.19.

--- a/Finnish/main/CleanMaster.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/CleanMaster.apk/res/values-fi-rFI/strings.xml
@@ -605,25 +605,27 @@
   <string name="wechat_qq_deep_clean_button_text">Syväpuhdista</string>
   <string name="wechat_qq_normal_files">Roskat</string>
   <string name="wechat_video_time">%1$s:%2$s</string>
-  <string name="whatsapp_btn_quick_cleanup">Puhdista %s</string>
-  <string name="whatsapp_clean_exit_confirm_cancel">Peruuta</string>
-  <string name="whatsapp_clean_exit_confirm_msg">Lopeta tarkistus</string>
-  <string name="whatsapp_clean_exit_confirm_ok">Ok</string>
-  <string name="whatsapp_clean_exit_confirm_title">Lopeta WhatsAppin puhdistuksen tarkistus</string>
-  <string name="whatsapp_content_empty">Ei puhdistettavia tiedostoja</string>
+  <string name="whatsapp_btn_quick_cleanup">Poista valitut kohteet (%s)</string>
+  <string name="whatsapp_clean_exit_confirm_cancel">Jatka tarkistusta</string>
+  <string name="whatsapp_clean_exit_confirm_msg">WhatsAppin tarkistus ei ole vielä valmis. Lopetetaanko tarkistus nyt?</string>
+  <string name="whatsapp_clean_exit_confirm_ok">Lopeta</string>
+  <string name="whatsapp_clean_exit_confirm_title">Lopetetaanko tarkistus?</string>
+  <string name="whatsapp_content_empty">Täällä ei ole kohteita.</string>
+  <string name="whatsapp_delete_confirm_cancel">Peruuta</string>
   <string name="whatsapp_delete_confirm_message">Poistetaanko?</string>
-  <string name="whatsapp_delete_done">Kaikki valmista!</string>
+  <string name="whatsapp_delete_confirm_ok">OK</string>
+  <string name="whatsapp_delete_done">Valmis</string>
   <string name="whatsapp_file_show_order">Tänään</string>
-  <string name="whatsapp_function_summery">Puhdista WhatsAppin roskatiedostot</string>
-  <string name="whatsapp_function_title">Puhdista WhatsApp</string>
-  <string name="whatsapp_group_audio">Ääni</string>
-  <string name="whatsapp_group_document">Asiakirja</string>
+  <string name="whatsapp_function_summery">Tyhjennä WhatsAppin liitetiedostot</string>
+  <string name="whatsapp_function_title">WhatsAppin puhdistaja</string>
+  <string name="whatsapp_group_audio">Äänitiedostot</string>
+  <string name="whatsapp_group_document">Asiakirjat</string>
   <string name="whatsapp_group_gif">GIF</string>
-  <string name="whatsapp_group_image">Kuva</string>
-  <string name="whatsapp_group_video">Video</string>
-  <string name="whatsapp_group_voice">Ääni</string>
-  <string name="whatsapp_group_wallpaper">Taustakuva</string>
-  <string name="whatsapp_title">Puhdista WhatsApp</string>
+  <string name="whatsapp_group_image">Kuvat</string>
+  <string name="whatsapp_group_video">Videot</string>
+  <string name="whatsapp_group_voice">Ääniviestit</string>
+  <string name="whatsapp_group_wallpaper">Taustakuvat</string>
+  <string name="whatsapp_title">WhatsAppin puhdistaja</string>
   <string name="whatsapp_type_document_recv">Vastaanotetut tiedostot</string>
   <string name="whatsapp_type_document_send">Lähetetyt tiedostot</string>
   <string name="whatsapp_type_image_recv">Vastaanotetut kuvat</string>
