--- a/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
@@ -62,8 +62,8 @@
      <string name="accessibility_data_connection_lte_plus">LTE+</string>
      <string name="accessibility_data_connection_roaming">Verkkovierailu</string>
      <string name="accessibility_data_connection_wifi">Wi-Fi</string>
-     <string name="accessibility_data_saver_off">Data saver pois käytöstä</string>
-     <string name="accessibility_data_saver_on">Data saver käytössä</string>
+     <string name="accessibility_data_saver_off">Datan säästäjä pois käytöstä</string>
+     <string name="accessibility_data_saver_on">Datan säästäjä käytössä</string>
      <string name="accessibility_desc_close">Sulje</string>
      <string name="accessibility_desc_connected">Yhdistetty.</string>
      <string name="accessibility_desc_connecting">Yhdistetään.</string>
@@ -121,8 +121,8 @@
      <string name="accessibility_quick_settings_collapse">Sulje Pika-asetukset.</string>
      <string name="accessibility_quick_settings_color_inversion_changed_off">Käänteiset värit poistettiin käytöstä.</string>
      <string name="accessibility_quick_settings_color_inversion_changed_on">Käänteiset värit otettiin käyttöön.</string>
-     <string name="accessibility_quick_settings_data_saver_changed_off">Data saver poistettiin käytöstä.</string>
-     <string name="accessibility_quick_settings_data_saver_changed_on">Data saver otettiin käyttöön.</string>
+     <string name="accessibility_quick_settings_data_saver_changed_off">Datan säästäjä poistettiin käytöstä.</string>
+     <string name="accessibility_quick_settings_data_saver_changed_on">Datan säästäjä otettiin käyttöön.</string>
      <string name="accessibility_quick_settings_detail">Pika-asetukset, %s.</string>
      <string name="accessibility_quick_settings_dnd">Älä häiritse.</string>
      <string name="accessibility_quick_settings_dnd_alarms_on">Älä häiritse käytössä, vain hälytykset.</string>
@@ -170,8 +170,8 @@
      <string name="accessibility_rotation_lock_on_portrait_changed">Näyttö on nyt lukittu pystysuuntaan.</string>
      <string name="accessibility_settings_button">Järjestelmäasetukset.</string>
      <string name="accessibility_signal_full">Signaali on täynnä.</string>
-     <string name="accessibility_splite_screen_primary">Lisää jaetun näytön ensisijaiseksi sovellukseksi</string>
-     <string name="accessibility_splite_screen_secondary">Lisää jaetun näytön toissijaiseksi sovellukseksi</string>
+     <string name="accessibility_splite_screen_primary">Lisättiin jaetun näytön ensisijaiseksi sovellukseksi</string>
+     <string name="accessibility_splite_screen_secondary">Lisättiin jaetun näytön toissijaiseksi sovellukseksi</string>
      <string name="accessibility_status_bar_headphones">Kuulokkeet yhdistetty</string>
      <string name="accessibility_status_bar_headset">Kuulokkeet yhdistetty</string>
      <string name="accessibility_status_bar_hotspot">Hotspot</string>
@@ -242,11 +242,14 @@
      <string name="confirm">Selvä</string>
      <string name="confirm_pin_msg">Anna Pin-koodi uudelleen</string>
      <string name="custom_lock_wallpaper_enter">Siirry</string>
-     <string name="data_saver">Data saver</string>
+     <string name="data_saver">Datan säästäjä</string>
+     <string name="data_saver_description">Vähentääksesi datan käyttöä, Datan säästäjä estää joitakin sovelluksia lähettämästi tai vastaanottamasta dataa taustalla. Tällä hetkellä käyttämäsi sovellus voi käyttää dataa, mutta saattaa käyttää sitä harvemmin. Tämä tarkoittaa sitä, että esimerkiksi kuvat eivät näyttäydy ennen kuin napautat niitä.</string>
+     <string name="data_saver_enable_button">Ota käyttöön</string>
+     <string name="data_saver_enable_title">Otetaanko Datan säästäjä käyttöön?</string>
      <string name="default_lockscreen_unlock_hint_text">Avaa lukitus pyyhkäisemällä ylös</string>
      <string name="default_theme">Oletus</string>
      <string name="delete">Poista</string>
-     <string name="dessert_case">Dessert Case</string>
+     <string name="dessert_case">Jälkiruokakotelo</string>
      <string name="digital_clock_dot">:</string>
      <string name="disable_vpn">Poista VPN käytöstä</string>
      <string name="disconnect_vpn">Katkaise VPN-yhteys</string>
@@ -508,50 +511,10 @@ Yritä uudelleen %2$d sekunnin kuluttua."</string>
      <string name="kg_wrong_password">Väärä salasana</string>
      <string name="kg_wrong_pattern">Väärä kuvio</string>
      <string name="kg_wrong_pin">Väärä PIN-koodi</string>
-     <string name="lb_control_display_fast_forward_multiplier">%1$dX</string>
-     <string name="lb_control_display_rewind_multiplier">%1$dX</string>
-     <string name="lb_guidedaction_continue_title">Jatka</string>
-     <string name="lb_guidedaction_finish_title">Valmis</string>
-     <string name="lb_guidedactions_item_disabled_chevron_alpha">0.5</string>
-     <string name="lb_guidedactions_item_disabled_description_text_alpha">0.25</string>
-     <string name="lb_guidedactions_item_disabled_text_alpha">0.25</string>
-     <string name="lb_guidedactions_item_enabled_chevron_alpha">1.0</string>
-     <string name="lb_guidedactions_item_unselected_description_text_alpha">0.5</string>
-     <string name="lb_guidedactions_item_unselected_text_alpha">1.0</string>
-     <string name="lb_media_player_error">MediaPlayer virhekoodi %1$d extra %2$d</string>
-     <string name="lb_navigation_menu_contentDescription">Navigointivalikko</string>
-     <string name="lb_onboarding_accessibility_next">Seuraava</string>
-     <string name="lb_onboarding_get_started">ALOITA</string>
-     <string name="lb_playback_controls_closed_captioning_disable">Poista suljettu kuvateksti käytöstä</string>
-     <string name="lb_playback_controls_closed_captioning_enable">Ota suljettu kuvateksti käyttöön</string>
-     <string name="lb_playback_controls_fast_forward">Kelaa eteenpäin</string>
-     <string name="lb_playback_controls_fast_forward_multiplier">Kelaa eteenpäin %1$dX</string>
-     <string name="lb_playback_controls_hidden">Median hallintapainikkeet piilotettu, paina d-padia näyttääksesi</string>
-     <string name="lb_playback_controls_high_quality_disable">Poista korkea kuvanlaatu käytöstä</string>
-     <string name="lb_playback_controls_high_quality_enable">Ota korkea kuvanlaatu käyttöön</string>
-     <string name="lb_playback_controls_more_actions">Lisää toimintoja</string>
-     <string name="lb_playback_controls_pause">Pysäytä</string>
-     <string name="lb_playback_controls_picture_in_picture">Siirry Kuva-kuvassa -tilaan</string>
-     <string name="lb_playback_controls_play">Toista</string>
-     <string name="lb_playback_controls_repeat_all">Toista kaikki</string>
-     <string name="lb_playback_controls_repeat_none">Älä toista</string>
-     <string name="lb_playback_controls_repeat_one">Toista kerran</string>
-     <string name="lb_playback_controls_rewind">Kelaa taaksepäin</string>
-     <string name="lb_playback_controls_rewind_multiplier">Kelaa taaksepäin %1$dX</string>
-     <string name="lb_playback_controls_shown">Median hallintapainikkeet näytetään</string>
-     <string name="lb_playback_controls_shuffle_disable">Poista sekoittaminen käytöstä</string>
-     <string name="lb_playback_controls_shuffle_enable">Ota sekoittaminen käyttöön</string>
-     <string name="lb_playback_controls_skip_next">Ohita seuraava</string>
-     <string name="lb_playback_controls_skip_previous">Ohita edellinen</string>
-     <string name="lb_playback_controls_thumb_down">Poista Peukku alas -valinta</string>
-     <string name="lb_playback_controls_thumb_down_outline">Valitse Peukku alas</string>
-     <string name="lb_playback_controls_thumb_up">Poista Peukku ylös -valinta</string>
-     <string name="lb_playback_controls_thumb_up_outline">Valitse Peukku ylös</string>
-     <string name="lb_playback_time_separator">/</string>
-     <string name="lb_search_bar_hint">Haku</string>
-     <string name="lb_search_bar_hint_speech">Puhu hakeaksesi</string>
-     <string name="lb_search_bar_hint_with_title">Hae %1$s</string>
-     <string name="lb_search_bar_hint_with_title_speech">Puhu hakeaksesi %1$s</string>
+     <string name="kilobyte_per_second">Kt/s</string>
+     <string name="label_view">Näytä</string>
+     <string name="launch_defaults_none">Oletuksia ei asetettu</string>
+     <string name="launch_defaults_some">Joitakin oletuksia asetettu</string>
      <string name="left_icon">Vasen kuvake</string>
      <string name="left_keycode">Vasen avainkoodi</string>
      <string name="left_nav_bar_button_type">Ylimääräisen vasemman painikkeen tyyppi</string>
@@ -626,27 +589,7 @@ Voit kysyä lisätietoja ottamalla yhteyttä järjestelmänvalvojaasi.
 
 Olet myös yhteydessä VPN-palvelimeen, joka voi valvoa verkon käyttöäsi."</string>
      <string name="monitoring_title_profile_owned">Profiilin valvonta</string>
-     <string name="mr_button_content_description">Suoratoisto-painike</string>
-     <string name="mr_cast_button_connected">Suoratoisto-painike. Yhdistetty</string>
-     <string name="mr_cast_button_connecting">Suoratoisto-painike. Yhdistetään</string>
-     <string name="mr_cast_button_disconnected">Suoratoisto-painike. Yhteys katkaistu</string>
-     <string name="mr_chooser_searching">Etsitään laitteita</string>
-     <string name="mr_chooser_title">Suoratoista laitteeseen</string>
-     <string name="mr_controller_album_art">Albumin kuva</string>
-     <string name="mr_controller_casting_screen">Suoratoistetaan näyttö</string>
-     <string name="mr_controller_close_description">Sulje</string>
-     <string name="mr_controller_collapse_group">Tiivistä</string>
-     <string name="mr_controller_disconnect">Katkaise yhteys</string>
-     <string name="mr_controller_expand_group">Laajenna</string>
-     <string name="mr_controller_no_info_available">Tietoa ei saatavilla</string>
-     <string name="mr_controller_no_media_selected">Mediaa ei valittu</string>
-     <string name="mr_controller_pause">Pysäytä</string>
-     <string name="mr_controller_play">Toista</string>
-     <string name="mr_controller_stop">Lopeta</string>
-     <string name="mr_controller_stop_casting">Lopeta suoratoisto</string>
-     <string name="mr_controller_volume_slider">Äänenvoimakkuuden liukusäädin</string>
-     <string name="mr_system_route_name">Järjestelmä</string>
-     <string name="mr_user_route_category_name">Laitteet</string>
+     <string name="mount_storage">Kyllä</string>
      <string name="nav_bar">Navigointipalkki</string>
      <string name="nav_bar_default">(oletus)</string>
      <string name="nav_bar_layout">Ulkoasu</string>
@@ -686,7 +629,6 @@ Olet myös yhteydessä VPN-palvelimeen, joka voi valvoa verkon käyttöäsi."</s
      <string name="notification_tap_again">Avaa napauttamalla uudelleen</string>
      <string name="open_camera_hint_text">Avaa kamera pyyhkäisemällä vasemmalle</string>
      <string name="open_remote_center_hint_text">Avaa Mi Kaukosäädin pyyhkäisemällä oikealle</string>
-     <string name="orb_search_action">Hae toimintoa</string>
      <string name="other">Muu</string>
      <string name="overview">Yleiskatsaus</string>
      <string name="phone_hint">Avaa Puhelin -sovellus pyyhkäisemällä kuvakkeesta</string>
@@ -940,6 +882,8 @@ valvoa"</string>
      <string name="structure_face_unlock_model_other_suggestion_2d">Kasvojen 2D-tunnistus on vähemmän turvallinen kuin kuvio, PIN-koodi tai salasana. Kun tämä ominaisuus on käytössä, laitteesi lukituksen voi mahdollisesti poistaa kuvallasi tai henkilöillä ja objekteilla, jotka näyttävät sinulta.</string>
      <string name="structure_face_unlock_model_other_suggestion_3d">Kasvojen 3D-tunnistus on suhteellisen turvallinen. On erittäin epätodennäköistä, että laitteesi lukitus voidaan poistaa kuvallasi, kun tämä ominaisuus on käytössä. Kuitenkin ihmiset tai objektit, jotka näyttävät sinulta, voivat mahdollisesti poistaa laitteesi lukituksen.</string>
      <string name="structure_face_unlock_model_other_title">Kasvojentunnistus</string>
+     <string name="structure_face_unlock_not_same_person">Sinun täytyy suorittaa kaikki vaiheet itse. Älä vaihda paikkoja kenenkään muun kanssa.</string>
+     <string name="structure_face_unlock_really_person">Näyttää siltä, että olet vaihtanut kasvosi objektin kanssa.</string>
      <string name="switch_bar_off">Pois käytöstä</string>
      <string name="switch_bar_on">Käytössä</string>
      <string name="symbol_colon">:</string>
