--- a/Finnish/main/miui.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/miui.apk/res/values-fi-rFI/strings.xml
@@ -419,7 +419,7 @@
   <string name="hybrid_provider">%1$s tarjoama</string>
   <string name="im">IM</string>
   <string name="immersion_button_close_description">Sulje</string>
-  <string name="instruction">Ohjeet</string>
+  <string name="instruction">Tärkeitä turvallisuustietoja</string>
   <string name="label">MIUI SDK</string>
   <string name="midnight">ap.</string>
   <string name="monday">Maanantai</string>
