--- a/Finnish/main/DownloadProviderUi.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/DownloadProviderUi.apk/res/values-fi-rFI/strings.xml
@@ -1,8 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- miui 10 valmis -->
-  <string name="common_google_play_services_unknown_issue">Sovelluksella %1$s on ongelmia Google Play palveluiden kanssa. Yritä uudelleen.</string>
-  <!-- miui 10 valmis-->
   <string name="DOWNLOAD_UNIT_BIT">t</string>
   <string name="DOWNLOAD_UNIT_GB">Gt</string>
   <string name="DOWNLOAD_UNIT_KB">Kt</string>
@@ -10,11 +7,12 @@
   <string name="DOWNLOAD_UNIT_TB">Tt</string>
   <string name="Only_the_wifi">Käytä vain Wi-Fi-yhteyttä</string>
   <string name="about">Tietoa</string>
+  <string name="action_back">Takaisin</string>
   <string name="action_settings">Asetukset</string>
-  <string name="ad_install">Asenna</string>
+  <string name="ad_download">Asenna</string>
   <string name="ad_mark">AD</string>
   <string name="ad_title">Käyttäjät myös lataavat näitä tällä  %1$s </string>
-  <string name="ad_title_other">Käyttäjät, jotka latasivat tämän kuvan, latasivat myös</string>
+  <string name="ad_title_other">Tämän kuvan lisäksi ihmiset myös lataavat</string>
   <string name="add_flow_fail_haveget_msg">Kokeilujakso on päättynyt.</string>
   <string name="add_flow_fail_vip_msg">Xunlei Latauksen Kiihdyttäjä on käytössä</string>
   <string name="add_flow_success_msg">%s lisätty tässä kuussa</string>
@@ -27,17 +25,21 @@
   <string name="app_label">Lataukset</string>
   <string name="auth_activity_title">Xunlei Tili</string>
   <string name="auth_fail">Lupaa ei saatu</string>
-  <string name="bind_xunlei_account">Lisää Xunlei Tili</string>
+  <string name="average_speed">Keskinopeus</string>
+  <string name="bind_xunlei_account">Lisättiin Xunlei-tili %1$s</string>
   <string name="bt_download">Lataa</string>
   <string name="bt_path_not_exit">Polkua ei ole olemassa</string>
   <string name="bt_restart_dialog_message">Käynnistetäänkö uudelleen kaikki BT kansiossa olevat lataukset?</string>
   <string name="bt_restart_dialog_title">Käynnistä lataukset uudelleen</string>
   <string name="bt_xunlei_open_info">Käytetäänkö Xunlei Moottoria näiden linkkien avaamiseen?</string>
+  <string name="btn_change">Vaihda</string>
   <string name="button_sort_by_date">Lajittele päivämäärän mukaan</string>
   <string name="button_sort_by_size">Lajittele koon mukaan</string>
+  <string name="byteShort">t</string>
   <string name="cancel">Peruuta</string>
   <string name="cancel_running_download">Peruuta</string>
   <string name="cancle">Peruuta</string>
+  <string name="choose_open_picture">Valitse toiminto</string>
   <string name="choose_open_time">Valitse milloin haluat aloittaa</string>
   <string name="clear_data">Tyhjennä</string>
   <string name="complete_time">Valmis:</string>
@@ -63,6 +65,8 @@
   <string name="dialog_confirm_delete_checkbox_message">Poista myös paikalliset tiedostot</string>
   <string name="dialog_confirm_delete_downloads_message">Poistetaanko %d tehtävää?</string>
   <string name="dialog_confirm_delete_the_download_item_message">Poista nämä tehtävät</string>
+  <string name="dialog_content_limit0">Rajoita latauksia</string>
+  <string name="dialog_content_limit_max">Rajoittamaton</string>
   <string name="dialog_failed_body">Yritetäänkö ladata tiedosto myöhemmin vai poistetaanko se jonosta?</string>
   <string name="dialog_file_already_exists">Ei voi ladata. Kohdetiedosto on jo olemassa.</string>
   <string name="dialog_file_missing_body">Ladattua tiedostoa ei löydy.</string>
@@ -71,8 +75,12 @@
   <string name="dialog_insufficient_space_on_external">Latausta ei voi ladata loppuun. Ulkoisella tallennuslaitteella ei ole tarpeeksi tilaa.</string>
   <string name="dialog_media_not_found">Ei voi ladata. Ulkoinen laite ei ole käytettävissä.</string>
   <string name="dialog_msg_disabled_net">%1$s estettyä latausta nykyisessä verkossa. Mene Tietoturva-sovellukseen napauttamalla Verkkoasetuksia.</string>
-  <string name="dialog_msg_recommend">"Et tule näkemään suositeltuja lähteitä pois laittamisen jälkeen. Voit säästää mobiilidataa valitsemalla \"Käytä vain Wi-Fi-yhteyttä\"."</string>
+  <string name="dialog_msg_recommend">"Et tule näkemään suositeltuja lähteitä, kun poistat sen käytöstä. Voit säästää mobiilidataa valitsemalla \"Käytä vain Wi-Fi-yhteyttä\"."</string>
   <string name="dialog_queued_body">Tämä tiedosto on jonossa tulevaa latausta varten, joten se ei ole vielä saatavilla.</string>
+  <string name="dialog_speed_cancel">Peruuta</string>
+  <string name="dialog_speed_msg">Mobiilidatan käyttäminen verkon testaukseen saattaa käyttää suuria määriä mobiilidataa. Jatketaanko siitä huolimatta?</string>
+  <string name="dialog_speed_ok">Jatka</string>
+  <string name="dialog_speed_title">Tiedonsiirtovaroitus</string>
   <string name="dialog_title_disabled_net">Pääsy internetiin</string>
   <string name="dialog_title_not_available">Lataus epäonnistui</string>
   <string name="dialog_title_queued_body">Tiedosto on jonossa</string>
@@ -146,21 +154,30 @@
   <string name="editmode_menu_delete">Poista</string>
   <string name="editmode_menu_share">Jaa</string>
   <string name="engine_open">Avaa</string>
-  <string name="enter_search">Etsi</string>
+  <string name="enter_search">Verkkohaku</string>
+  <string name="everyone_test">Kaikki kokeilee</string>
   <string name="experience_xunlei_account_speed">Xunlei jäsenet nauttivat salamannopeasta lataamisesta.</string>
   <string name="expire_notification_msg">Xunlei jäsenyys päättyy pian.</string>
   <string name="expire_today_notification_msg">Xunlei jäsenyys päättyy tänään.</string>
   <string name="extend">Lisää</string>
+  <string name="extra_ad_title">Saatat myös tykätä</string>
   <string name="extract_file">Puretaan tiedostoa…</string>
+  <string name="fastest_speed">Huippunopeus</string>
+  <string name="fileSizeSuffix">%1$s %2$s</string>
   <string name="file_exist_hint">Tämä tiedosto on jo olemassa</string>
   <string name="file_picker">Valitse sijainti</string>
   <string name="file_size">Koko:</string>
+  <string name="flow_consume">Liikenne</string>
+  <string name="force_touch_newdownload">Uusi lataus</string>
+  <string name="force_touch_rank">Sijoitukset</string>
+  <string name="force_touch_search">Hae verkosta</string>
   <string name="free_high_speed_channel">Xunlei kiihdyttäjä (ilmainen)</string>
   <string name="free_speedup_exp">Kokeile Xunlei latauksen kiihdyttäjää ilmaiseksi</string>
   <string name="get_account_dialog_msg">Haetaan tilitietoja…</string>
   <string name="get_data_failed">Tietoja ei saatu, yritä myöhemmin uudelleen</string>
   <string name="get_order_dialog_msg">Haetaan tilauksen tietoja…</string>
   <string name="get_order_fail_msg">Tietoja ei saatu</string>
+  <string name="gigabyteShort">Gt</string>
   <string name="goto_global_search">Etsitään \"%1$s\" verkosta</string>
   <string name="guess_like">Saatat myös tykätä</string>
   <string name="high_speed_channel">Xunlei kiihdyttäjä (ostettu):  </string>
@@ -170,6 +187,7 @@
   <string name="high_speed_tryout_speedup_confirm">Valmistellaan nopeuden kiihdyttämistä…</string>
   <string name="high_speed_tryout_time">Koeaikaa jäljellä: %1$s. Ryhdy Xunlei jäseneksi.</string>
   <string name="hint">Huomio</string>
+  <string name="home_page_new_download_guide">Uudet lataukset menevät tänne</string>
   <string name="immediately_a_renewal">Uusi nyt</string>
   <string name="info_flow_only_load_wifi">Lataa suositellut lähteet Wi-Fi-yhteydellä</string>
   <string name="info_flow_setting">Sisällön asetukset</string>
@@ -182,18 +200,24 @@
   <string name="invalid_address">Tiedostopolku on virheellinen</string>
   <string name="jump_rank_hint">Katso tämän päivän lataustilastoja &gt;</string>
   <string name="keep_queued_download">Säilytä</string>
+  <string name="kilobyteShort">Kt</string>
   <string name="load_finish_hint">Voit jatkaa katsomista huomenna</string>
   <string name="loading">Odota hetki…</string>
   <string name="media_filter">Media</string>
+  <string name="megabyteShort">Mt</string>
   <string name="member_cost">Vuosittainen</string>
   <string name="menu_all_task_pause">Pysäytä kaikki</string>
   <string name="menu_all_task_start">Aloita kaikki</string>
+  <string name="menu_back">Takaisin Xunlei-jäsenyyteen</string>
+  <string name="menu_des_more">Lisää</string>
+  <string name="menu_des_vip">Xunlei-jäsenyys</string>
   <string name="menu_enter_edit_mode">Muokkaa</string>
   <string name="menu_preferences">Asetukset</string>
-  <string name="menu_title_fileexplore">Tiedostojenhallinta</string>
+  <string name="menu_title_fileexplore">Tiedostohallinta</string>
   <string name="menu_title_pause_all">Pysäytä kaikki</string>
   <string name="menu_title_resume_all">Aloita kaikki</string>
   <string name="menu_title_settings">Asetukset</string>
+  <string name="menu_vip_unbind">Erota</string>
   <string name="mi_money">Mi Krediitit</string>
   <string name="mi_money_">Mi Krediitit</string>
   <string name="missing_title">&lt;Tuntematon&gt;</string>
@@ -210,7 +234,10 @@
   <string name="no_share_files_content">Jotkut jakamasi tiedostot on jo poistettu. Jaettiin muut tiedostot onnistuneesti.</string>
   <string name="no_vip_info">Hanki Xunlei jäsenyys nopeuttaaksesi latauksia</string>
   <string name="no_vip_show_info">Nopeuta latauksia kaikilla laitteillasi Xunlein avulla</string>
-  <string name="notify_disabled_net_by_app">Internet pääsy rajattu</string>
+  <string name="notify_disabled_net_by_app">Internetyhteys rajoitettu</string>
+  <string name="notify_install_guide_forward_text">Avaa</string>
+  <string name="notify_install_guide_msg">Asennettiin onnistuneesti</string>
+  <string name="notify_install_guide_title">Asennettiin %s onnistuneesti</string>
   <string name="notify_not_support">Tämän kaltaiset ilmoitukset ei ole tuettu, päivitä nyt</string>
   <string name="notify_only_wifi_download">Odotetaan Wi-Fi-yhteyttä</string>
   <string name="one_month">1 kuukausi</string>
@@ -218,7 +245,7 @@
   <string name="open">Avaa</string>
   <string name="open_download">Avaa</string>
   <string name="open_folder">Avaa kansio</string>
-  <string name="open_vip_hint">Napauta ryhtyäksesi Xunlei Jäseneksi</string>
+  <string name="open_vip_hint">Napauta ryhtyäksesi Xunlei-jäseneksi</string>
   <string name="open_vip_speedup">Ryhdy jäseneksi nopeuttaaksesi latauksia &gt;</string>
   <string name="open_xunlei_speed_service">Käynnistä Xunlei latauksen kiihdyttäjä</string>
   <string name="original_price">Hinta</string>
@@ -233,11 +260,13 @@
   <string name="paused_unknown">Pysäytetty</string>
   <string name="paused_waiting_for_network">Odotetaan verkkoyhteyttä</string>
   <string name="paused_waiting_to_retry">Odotetaan uudelleenyritystä</string>
+  <string name="percent_title">%1$s henkilöä ladannut</string>
   <string name="period_of_validity">Voimassaolo:</string>
-  <string name="pref_download_revert_default">Oletus</string>
-  <string name="pref_download_settings_title">Latauksen koon raja</string>
-  <string name="pref_download_storage_path">Luo uusi kansio latauksille</string>
-  <string name="pref_sniff_shortcut">Luo pikakuvake</string>
+  <string name="petabyteShort">Pt</string>
+  <string name="pref_download_revert_default">Tallenna oletussijaintiin</string>
+  <string name="pref_download_settings_title">Ladataan käyttäen rajoitettua mobiilidataa</string>
+  <string name="pref_download_storage_path">Tallenna mukautettuun sijaintiin</string>
+  <string name="pref_sniff_shortcut">Luo Aloitusnäytön pikakuvake verkkohaulle</string>
   <string name="pref_summary_any_bytes_popup">Odota aina Wi-Fi-yhteyttä tiedostojen lataamiseen</string>
   <string name="pref_summary_enable_max_bytes_popup">Näytä ilmoitusikkuna, kun lataat mobiiliverkolla</string>
   <string name="pref_summary_max_bytes_limit_format">Odota Wi-Fi-yhteyttä, jos tiedoston koko ylittää %s</string>
@@ -274,8 +303,12 @@
   <string name="revert_download_path">Käytetäänkö latauksille oletussijaintia?</string>
   <string name="save_path">"Tallenna lataukset: "</string>
   <string name="save_text">Säästä ￥%1$s</string>
+  <string name="search_app_name">下载管理</string>
   <string name="search_clear_history_btn">Tyhjennä hakuhistoria</string>
   <string name="search_clear_history_toast">Historia tyhjennetty</string>
+  <string name="search_download">下载管理</string>
+  <string name="search_download_desc">查看和管理下载任务</string>
+  <string name="search_download_key_words">迅雷下载中心;暂停下载任务;下载管理器;正在下载中;已下载完成;下载文件管理器;文件存储目录;下载储存目录;下载存储路径;管理下载任务;下载工具;下载文件夹;已下载文件;迅雷手机下载;小米资源下载中心;保存目录;保存路径;下载存储位置;下载路径;下载存储目录;下载任务找不到;下载任务在哪里;下载任务管理器;停止下载;删除下载任务</string>
   <string name="search_favorite_empty">Lisää lähteitä suosikkeihin</string>
   <string name="search_favorite_title">Suosikit</string>
   <string name="search_history">Hakuhistoria</string>
@@ -285,7 +318,7 @@
   <string name="search_history_today">Tänään</string>
   <string name="search_history_year">d.M.yyyy</string>
   <string name="search_history_yesterday">Eilen</string>
-  <string name="search_home_download_popup">Mene takaisin Latauksiin</string>
+  <string name="search_home_download_popup">Mene takaisin latauksiin</string>
   <string name="search_home_vif_show_more">Lisää</string>
   <string name="search_hot_anime">Piirretyt</string>
   <string name="search_hot_movie">Elokuvat</string>
@@ -297,13 +330,22 @@
   <string name="search_hotwords_switch">Vaihda</string>
   <string name="search_input_empty_toast">Hae tai syötä URL-osoite</string>
   <string name="search_input_hint">Hae tai syötä URL-osoite</string>
+  <string name="search_new_download">新建下载</string>
+  <string name="search_new_download_desc">支持BT、电驴、磁力链任务</string>
+  <string name="search_new_download_key_words">新建下载任务;新建下载文件;bt下载器;种子下载器;emule下载器;电驴下载器;迅雷下载器;thunder;磁力链下载器;资源下载器;下载工具;新建任务;视频下载</string>
   <string name="search_nonetwork_prompt">Tarkista verkkoyhteys ja yritä uudelleen</string>
   <string name="search_nonetwork_refresh">Päivitä</string>
+  <string name="search_rank">下载热榜</string>
+  <string name="search_rank_desc">看看今天热门的应用和游戏</string>
+  <string name="search_rank_key_words">下载热榜;热门下载榜;热门应用;热门游戏</string>
   <string name="search_recommend_empty">Ei kohteita</string>
   <string name="search_vif_empty">Ei suositeltavia kohteita</string>
   <string name="search_vif_score_text">Arvosana: %1$s</string>
   <string name="search_website">Nettisivut</string>
   <string name="search_website_more">Lisää</string>
+  <string name="search_xl_account">迅雷会员</string>
+  <string name="search_xl_account_desc">提升您的下载速度</string>
+  <string name="search_xl_account_key_words">迅雷会员;充值会员;下载加速;下载速度慢;下载不了</string>
   <string name="select_all">Valitse kaikki</string>
   <string name="select_operation_items">Valitse kohteet</string>
   <string name="select_sub_file_download">Valitse ladattava tiedosto</string>
@@ -351,7 +393,7 @@
   <string name="sniff_terms_check_text">Hyväksy Palveluehdot</string>
   <string name="sniff_terms_msg">Hyväksy \"Käyttöehdot\" käyttääksesi kolmannen osapuolen hakumoottoria.</string>
   <string name="sniff_terms_msg_a">Tämän hakutoiminnon tarjoaa kolmannen osapuolen kehittäjä. Sinun täytyy hyväksyä Palveluehdot, ennen sen käyttämistä.</string>
-  <string name="sniff_terms_msg_b">Tämän hakutoiminnon tarjoaa kolmannen osapuolen kehittäjä. Sinun täytyy hyväksyä Palveluehdot, ennen sen käyttämistä. Hyväksy Ehdot painamalla alla olevaa valintalaatikkoa.</string>
+  <string name="sniff_terms_msg_b">Tämän hakutoiminnon tarjoaa kolmannen osapuolen kehittäjä. Sinun täytyy hyväksyä Palveluehdot, ennen sen käyttämistä. Jos hyväksyt Ehdot, napauta alla olevaa valintalaatikkoa.</string>
   <string name="sniff_terms_msg_bold">Käyttöehdot</string>
   <string name="sniff_terms_msg_bold_new">Palveluehdot</string>
   <string name="sniff_terms_reject">Hylkää</string>
@@ -359,6 +401,19 @@
   <string name="sniff_text_sniff_next_page">Jatka</string>
   <string name="sniff_vip_tip_speedup">Voit kokeilla nopeuden kiihdyttäjää kerran ilmaiseksi</string>
   <string name="sniff_vip_tip_vip">Xunlei voi jatkaa nopeutesi kiihdyttämistä</string>
+  <string name="speed_entrance">Testaa Wi-Fi:n nopeus</string>
+  <string name="speed_result_broadband_text1">Nykyinen latausnopeus</string>
+  <string name="speed_result_broadband_text2">%s kaistanleveyttä</string>
+  <string name="speed_result_broadband_text3">Laajakaista</string>
+  <string name="speed_result_finish">Valmis</string>
+  <string name="speed_result_restart">Testaa uudelleen</string>
+  <string name="speed_start">Testaa</string>
+  <string name="speed_stop">Peruuta</string>
+  <string name="speed_tip_netwrok_fail">Tapahtui verkkovirhe, yritä uudelleen</string>
+  <string name="speed_tip_netwrok_timeout">Yhteys aikakatkaistiin, yritä uudelleen</string>
+  <string name="speed_tip_no_netwrok">Verkkoyhteyttä ei voitu muodostaa. Yhdistä ja yritä uudelleen.</string>
+  <string name="speed_title">Testaa Wi-Fi:n nopeus</string>
+  <string name="speed_title_result">Testaa Wi-Fi:n nopeus</string>
   <string name="start_analysis">Tarkista nyt</string>
   <string name="start_download">Lataa</string>
   <string name="start_xunlei_speedup_info">Kirjaudu sisään kiihdyttääksesi latauksia.</string>
@@ -373,7 +428,12 @@
   <string name="subfile_list">Tiedostot</string>
   <string name="task_detail">Tehtävät</string>
   <string name="task_detail_notfound_confirm">OK</string>
-  <string name="task_fail">Epäonnistui</string>
+  <string name="task_fail">Toimintoa ei voitu suorittaa loppuun</string>
+  <string name="terabyteShort">Tt</string>
+  <string name="test_speed">Testaa</string>
+  <string name="test_speed_detail">Tiedot</string>
+  <string name="test_speed_please">Testaa nopeus napauttamalla...</string>
+  <string name="test_speed_result">Testin tulokset</string>
   <string name="text_showmore_infoflow">Näytä lisää lähteitä</string>
   <string name="third_web_cancel">Peruuta</string>
   <string name="third_web_confirm">OK</string>
@@ -382,14 +442,17 @@
   <string name="third_web_filesize">Koko</string>
   <string name="third_web_savepath">Sijainti</string>
   <string name="third_web_title">Lataa</string>
+  <string name="time_consume">Kesto</string>
   <string name="title_homepage_infoflow">Viimeaikaiset päivitykset</string>
   <string name="title_tips">Huomio</string>
   <string name="title_unbind_xunlei">Poista Xunlei Tilisi</string>
   <string name="toast_only_wifi_download">Lataa tämä tiedosto yhdistämällä Wi-Fi-verkkoon</string>
+  <string name="toast_update_data_limit_fail">Ei voitu asettaa</string>
   <string name="toast_xunlei_engine_open">Xunlei latauksen kiihdyttäjä otettiin käyttöön</string>
   <string name="torrent_file_error">Tätä torrent-tiedostoa ei voitu jäsentää</string>
   <string name="torrent_no_subfile">Ei alitiedostoja tässä torrentissa</string>
   <string name="total_speedup">Nopeuden kiihdytys (yhteensä)</string>
+  <string name="try_download">Yritä ladata</string>
   <string name="turn_off_xunlei_message">Saatat kohdata hitaampia latausnopeuksia.</string>
   <string name="turn_off_xunlei_tips">Xunlei latauksen kiihdyttäjä ei käytössä</string>
   <string name="turn_off_xunlei_title">Poista Xunlei käytöstä</string>
@@ -420,7 +483,7 @@
   <string name="xl_month_vip_open">Kuukausittainen jäsenyys (%1$s Mi Krediittiä)</string>
   <string name="xl_month_vip_renew">Uusi yhdeksi kuukaudeksi (%1$s Mi Krediittiä)</string>
   <string name="xl_pay_info">Yhteensä %1$s Yuan, säästät %2$s Yuan</string>
-  <string name="xl_privilege_play">Latauksen soittaminen</string>
+  <string name="xl_privilege_play">Synkronoi soittaminen</string>
   <string name="xl_privilege_play_info">Suoratoista keskeneräiset lataukset usealle laitteelle</string>
   <string name="xl_privilege_speedup">Latauksen kiihdyttäjä</string>
   <string name="xl_privilege_speedup_info">High-speed kanava ja offline-latauksille tuki</string>
